Loom: Fix optimized build after commit 4d2710

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • repo-loom
    • Affects Version/s: repo-loom
    • Component/s: hotspot
    • None

      optimized build failed with the following error message.

      ```
      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_continuation.o:
      /home/runner/work/loom/loom/jdk/src/hotspot/share/runtime/continuation.cpp:3055:13: error: 'void print_frames(JavaThread*, outputStream*)' defined but not used [-Werror=unused-function]
       3055 | static void print_frames(JavaThread* thread, outputStream* st) {
            | ^~~~~~~~~~~~
      cc1plus: all warnings being treated as errors

      * All command lines available in /home/runner/work/loom/loom/jdk/build/linux--hotspot/make-support/failure-logs.
      === End of repeated output ===
      ```

      I suppose this failure was introduced in commit 4d2710 (link: https://github.com/openjdk/loom/commit/4d2710#diff-74c5a41cb3476b29151b4a13732cf4756879de0aa1b1d8c4d73c38e570413fcfR2851)

      In commit 4d2710, one invocation of function print_frames() is moved from "! PRODUCT" to ASSERT.
      As a result, function print_frames() is not used in optimized VM build.

            Assignee:
            Hao Sun
            Reporter:
            Hao Sun
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: